--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Completed the project on datacamp utilising Python. Needed to use libraries: Pandas, Seaborn and Matplotlib.pyplot. Loaded in the csv files then using dataframes 
 I transformed the data which was then used to create visualisation to help identify the perfomance of the two athletes. 
 I have attached the 2 csv files as well as my code in two different formats. 
+My code is attached in the folder "notebook" and is visible as both a html as well as python file.
